<resources>
    <string name="app_name">AsoDes</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="address">address</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="full_name">Full Name*</string>
    <string name="identification">Identification*</string>
    <string name="salary">Salary*</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password*</string>
    <string name="submit">Submit</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="back">Back</string>
    <string name="calcula_cuota">calcula Cuota</string>
    <string name="prestamos">Prestamos</string>
    <string name="cuota_a_asignar">Cuota a Asignar</string>
    <string name="fee_to_pay">Fee to Pay</string>
    <string name="gestionar_ahorros">Gestionar Ahorros</string>
    <string name="pay">Pay Month</string>
    <string name="amount_to_reduce_per_month">amount to reduce per month</string>
</resources>