<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asodes.CreateClientActivity">
    <Button
        android:id="@+id/buttonBackForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/buttonBackForm"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/fullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/idNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/identification"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/salaryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/salary"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="Address*"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                tools:ignore="HardcodedText,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/dateOfBirthEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/date_of_birth"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <Spinner
                android:id="@+id/civilStatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />
            <!--                android:entries="@array/civil_status_options" -->

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/submit"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>